<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="app.ejemplo.libretadehimnos.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/conten1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/versiculo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/back_text"
                    android:padding="20dp"
                    android:text="@string/versiculo"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/textPrincipal"
                    android:typeface="monospace"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/titulo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/titulo1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/petit_formal_script"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/iraLista"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttom_drawable_background"
                    android:onClick="onClinck"
                    android:text="@string/iraLista"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"/>
                <Button
                    android:id="@+id/reproductor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:text="@string/reproductor"
                    android:background="@drawable/buttom_drawable_background"
                    android:onClick="reproductor"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/mode" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>